--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,21 @@ nav {
  /** FIN menu **/
 
 
+ /** DEL BIOGRAPHY SLIDE **/
+
+ .carousel-item {
+  height: 200px;
+}
+
+.item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100px;
+}
+
+ /** DEL BIOGRAPHY SLIDE **/
+
 
 
 
