--- a/css/style.css
+++ b/css/style.css
@@ -216,14 +216,14 @@ nav {
  /** DEL BIOGRAPHY SLIDE **/
 
  .carousel-item {
-  height: 200px;
+  height: 300px;
 }
 
 .item img {
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 100px;
+    min-height: 300px;
 }
 
  /** DEL BIOGRAPHY SLIDE **/
@@ -233,114 +233,16 @@ nav {
 
 
 
+/** pagina que aparece al hacer click en herader **/
 
+   .card-body{
 
-    /* codigo para las imagenes del INDEX y texto y diseño redondo */
-
-    *,
-    *::before,
-    *::after {
-      box-sizing: border-box;
-    }
-    
-    
-    .textogrande {
-      font-size: calc(1.475rem + 2.7vw);
-      font-weight: 300;
-      line-height: 1.2;
-      color: rgb(255, 255, 255);
-      margin-top:50%;
-      
-       
+    background-color:#000;
+  color: white;
    }
 
    
-    
-    
-    
-    .img {
-      max-width: 100%;
-      height: auto;
-    }
-    
-    .img-thumbnail {
-      padding: 0.25rem;
-      background-color: rgb(14, 230, 140);
-      border: 1px solid #dee2e6;
-      border-radius: 0.25rem;
-      max-width: 100%;
-      height: auto;
-    }
-    
-    .container,
-    .container-sm {
-      width: 100%;
-      padding-right: var(--bs-gutter-x, 0.75rem);
-      padding-left: var(--bs-gutter-x, 0.75rem);
-      margin-right: auto;
-      margin-left: auto;
-      margin-top: 50px;
-    }
-
-    .row {
-        --bs-gutter-x: 1.5rem;
-        --bs-gutter-y: 0;
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: calc(-1 * var(--bs-gutter-y));
-        margin-right: calc(-0.5 * var(--bs-gutter-x));
-        margin-left: calc(-0.5 * var(--bs-gutter-x));
-      }
-      
-      
-      
-      
-      .row > * {
-        flex-shrink: 0;
-        width: 100%;
-        max-width: 100%;
-        padding-right: calc(var(--bs-gutter-x) * 0.5);
-        padding-left: calc(var(--bs-gutter-x) * 0.5);
-        margin-top: var(--bs-gutter-y);
-      }
-      
-      
-        .col-lg-6 {
-          flex: 0 0 auto;
-          width: 50%;
-        }
-      
-        
-        /* espacio entre fotos*/
-      
-        .espacio1 {
-          padding: 3rem !important;
-         
-        }
-        
-        /* espacio entre fotos*/
-        
-      
-      .rounded-circle {
-        border-radius: 50% !important;
-        padding-top: 70px;
-      }
-      
-      
-
-   
-      
-      
-      
-    
-    @media (min-width: 320px) 
-      .container-sm, .container {
-        max-width: 1140px;
-      }
-    
-    
-    /* fin codigo para las imagenes del home y texto y diseño redondo */
-
+/** pagina que aparece al hacer click en herader **/
 
 
 
