--- a/css/style.css
+++ b/css/style.css
@@ -95,17 +95,15 @@ div.desc {
 
 
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 12vh;
-    background-color: rgb(0, 0, 0);
-    font-family:Arial, Helvetica, sans-serif;
-   
-    
-    
-
-    }
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  font-family:Arial, Helvetica, sans-serif;
+  
+ 
+  
+ }
 
 
 
@@ -215,15 +213,21 @@ nav {
  /** DEL BIOGRAPHY SLIDE **/
 
  .carousel-item {
-  height: 300px;
+  height: 32rem;
+ 
 }
+
+
 
 .item img {
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 300px;
+    min-height: 100px;
+   
 }
+
+
 
  /** DEL BIOGRAPHY SLIDE **/
 
@@ -236,7 +240,8 @@ nav {
 
    .card-body{
 
-    background-color:rgb(48, 49, 47);
+    background-color:
+    
   color: white;
    }
 
