--- a/css/estilos.css
+++ b/css/estilos.css
@@ -78,10 +78,12 @@ nav {
   list-style: none;
   line-height: 70px;
 }
-.menu .menu ul li {
+
+.menu ul li {
   float: left;
 }
-.menu .menu ul li a {
+
+.menu ul li a {
   text-decoration: none;
   width: 100px;
   display: block;
@@ -91,7 +93,8 @@ nav {
   font-weight: bold;
   color: #fff;
 }
-.menu .menu ul li a:hover {
+
+.menu ul li a:hover {
   color: #ff00bb;
 }
 
@@ -266,7 +269,6 @@ form button {
   width: 100%;
   padding: 100px 0px;
 }
-
 .about img {
   height: auto;
   width: 430px;
@@ -317,3 +319,14 @@ form button {
 }
 
 /* termina del about */
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
