--- a/css/estilos.css
+++ b/css/estilos.css
@@ -159,7 +159,8 @@ nav {
   }
 }
 /** FIN menu **/
-/** FIN menu **/
+
+
 /** DEL BIOGRAPHY SLIDE **/
 .carousel-item {
   height: 80vh;
@@ -176,7 +177,8 @@ nav {
 }
 
 /** DEL BIOGRAPHY SLIDE **/
-/** news **/
+
+
 /** news **/
 /* footer*/ /* footer*/ /* footer*/ /* footer*/ /* footer*/ /* footer*/
 footer {
@@ -250,10 +252,10 @@ form button {
 .video-responsive object,
 .video-responsive embed {
   position: absolute;
-  top: 50px;
+  top: -90px;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
 /** del news*/
@@ -262,6 +264,14 @@ form button {
   margin: 0;
   font-family: "Josefin Sans", sans-serif;
   box-sizing: border-box;
+}
+
+
+  @media only screen and (max-width: 1200px) {
+    ..about {
+      width: 100%;
+    
+  }
 }
 
 /* del about */
@@ -288,7 +298,7 @@ form button {
 }
 
 .about-text h2 {
-  color: white;
+  color: #ff00bb;
   font-size: 75px;
   text-transform: capitalize;
   margin-bottom: 20px;
@@ -330,3 +340,14 @@ form button {
     width: 100%;
   }
 }
+
+button{
+  color:white;
+  background-color: #ff00bb;
+}
+
+
+
+
+
+
