--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,10 +163,11 @@ nav {
 
 /** DEL BIOGRAPHY SLIDE **/
 .carousel-item {
-  height: 80vh;
-  min-height: 300px;
+  min-height: 400px;
   background: no-repeat scroll center scroll;
   background-size: cover;
+  width: 300px;
+height: 350px;
 }
 
 .item img {
@@ -175,6 +176,7 @@ nav {
   left: 0;
   min-height: 100px;
 }
+
 
 /** DEL BIOGRAPHY SLIDE **/
 
