--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,7 +14,7 @@ body {
   height: auto;
 }
 
-/* foto del header */
+
 /* parte del biography */
 div.gallery {
   border: 1px solid #ccc;
@@ -66,17 +66,17 @@ nav {
 }
 
 /** menu **/
-/** menu **/
 .menu {
   width: 100%;
   background: rgb(8, 8, 8);
   overflow: auto;
+
 }
 .menu .menu ul {
   margin: 0;
   padding: 0;
   list-style: none;
-  line-height: 70px;
+  line-height: 100px;
 }
 
 .menu ul li {
@@ -231,6 +231,7 @@ footer {
 }
 
 /* footer*/ /* footer*/ /* footer*/ /* footer*/
+
 @media screen and (min-width: 320px) {
   .footer,
 .col-2,
@@ -242,6 +243,7 @@ form button {
     flex-wrap: wrap;
   }
 }
+
 /* video pRA media */
 .video-responsive {
   position: relative;
@@ -268,42 +270,47 @@ form button {
   box-sizing: border-box;
 }
 
+.button {
+  background-color:#ff00bb;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+/** del news*/
 
   @media only screen and (max-width: 1200px) {
-    ..about {
+    .about {
       width: 100%;
     
   }
 }
 
 /* del about */
-.about {
+.container-fluid{
   width: 100%;
   padding: 100px 0px;
+  display: flex;
+ 
 }
-.about img {
+.image-fluid {
   height: auto;
-  width: 430px;
+  width: 100%;
 }
 
 .about-text {
   width: 550px;
 }
 
-.main {
-  width: 1130px;
-  max-width: 95%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
 .about-text h2 {
   color: #ff00bb;
   font-size: 75px;
   text-transform: capitalize;
-  margin-bottom: 20px;
+  margin-bottom: 90px;
+  text-align: center;
 }
 
 .about-text h4 {
@@ -312,14 +319,19 @@ form button {
   font-size: 22px;
   margin-bottom: 25px;
   text-transform: capitalize;
+  padding-left: 20px;
+
 }
 
 .about-text p {
-  color: rgba(0, 0, 0, 0.8);
+  color:white;
   letter-spacing: 1px;
   line-height: 28px;
   font-size: 18px;
   margin-bottom: 45px;
+  padding-right: 20px;
+  padding-left: 20px;
+  text-align: justify;
 }
 
 .title h2 {
@@ -331,6 +343,7 @@ form button {
 }
 
 /* termina del about */
+
 @media only screen and (max-width: 700px) {
   .responsive {
     width: 49.99999%;
@@ -343,13 +356,75 @@ form button {
   }
 }
 
-button{
-  color:white;
-  background-color: #ff00bb;
+
+/* formulario  responsive */
+
+
+* {
+  box-sizing: border-box;
 }
 
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
 
+}
 
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color:#ff00bb
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color:#ff00bb;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  padding-top: 50px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout */
+@media screen and (max-width: 1200px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
 
 
 
