--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -20,13 +20,13 @@ body {
 
  /*mixin*/
 
-    $mixin: navmenu (
+    $mixin navmenu (
 
       display: flex;
-      justify-content: space-around;
-      align-items: center;
-      min-height: 8vh;
-      font-family:Arial, Helvetica, sans-serif;
+      justify-content: space-around:
+      align-items: center:
+      min-height: 8vh:
+      font-family:Arial, Helvetica, sans-serif
     )
 
 
@@ -34,12 +34,16 @@ body {
 
     
 
-    .menu ul li a{
+    .menu ul li a {
 
       color: map-get($estilos: , color);
       text-align: map-get ($estilos, center);
-      font-size: map-get ($estilos, tFuente;)
+      font-size: map-get ($estilos, tFuente); 
     }
+
+ 
+
+
      /*maps*/
   
   
@@ -109,39 +113,6 @@ body {
       width: 100%;
     }
   }
-  
-  /*fin del biography*/
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /** para que no desaparesca el original
-
-
-  nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 8vh;
-    font-family:Arial, Helvetica, sans-serif;
-    
-   
-    
-   }
-  
-  **/ 
-
 
   nav {
     @include navmenu ();
@@ -149,16 +120,7 @@ body {
 
   }
   
-
-
-
-
-  
-  
-  /** menu **/
-  
-  
-  
+ /** menu **/
   .menu{
     width:100%;
     background:$bgcolor;
@@ -248,19 +210,9 @@ body {
         display: block;
     }
   }
+  /** FIN menu **/
   
-  
-  
-   /** FIN menu **/
-  
-  
-  
-  
-  
- 
-  
-  
-   /** DEL BIOGRAPHY SLIDE **/
+/** DEL BIOGRAPHY SLIDE **/
   
    .carousel-item {
     height: 80vh;
@@ -270,9 +222,6 @@ body {
     background-size: cover;
    
   }
-  
-  
-  
   .item img {
       position: absolute;
       top: 0;
@@ -280,30 +229,9 @@ body {
       min-height: 100px;
      
   }
-  
-  
-  
-   /** DEL BIOGRAPHY SLIDE **/
-  
-  
-  
-  
-  
-  
- 
-  
-  
-  
-  
-     
-   
-  
-    
-  
+  /** FIN DEL BIOGRAPHY SLIDE **/
   
   /* footer*/ /* footer*/   /* footer*/   /* footer*/   /* footer*/   /* footer*/
-  
-  
   footer{
     width: 100%;
     
@@ -318,11 +246,6 @@ body {
    
   }
   
-  .form{
-
-  }
- 
-  
   .container, .footer-menu-container{
     display: flex;
     justify-content: center;
@@ -330,8 +253,6 @@ body {
     flex-wrap: wrap;
     margin-bottom: 1rem;
   }
-  
-  
   
   .footer-menu-container{
     list-style-type: none;
@@ -357,38 +278,15 @@ body {
   
   /* footer*/  /* footer*/ /* footer*/ /* footer*/
   
-  
-  
-  
-  
-  
-  
-    
-  
-  
-   
-   
-    
-  @media screen and (min-width: 320px) {
+   @media screen and (min-width: 320px) {
     
     .footer,
     .col-2,
     .col-3,
-    form button,
-    , {
-  
-      flex-wrap: wrap;
-  
-  
-  
-    }
-  
+    form button,}
    
   
-    
-    
   
-      }
   
   
   
@@ -413,11 +311,7 @@ body {
   
       }
       
-  
-  
-  
-  
-      /** del news*/
+     /** del news*/
   
       *{
         padding: 0;
@@ -426,11 +320,7 @@ body {
         box-sizing: border-box;
       }
 
-    
-
-
-      
-       /* del about */
+      /* del about */
       
        .about{
         width: 100%;
@@ -444,16 +334,6 @@ body {
       .about-text{
         width: 550px;
       }
-
- 
-  
-    
-    
-  
-      
-  
-         
-
 
       .main{
 	width: 1130px;
