--- a/css/estilos.css
+++ b/css/estilos.css
@@ -244,24 +244,6 @@ form button {
   }
 }
 
-/* video pRA media */
-.video-responsive {
-  position: relative;
-  padding-bottom: 56.25%; /* 16/9 ratio */
-  padding-top: 30px; /* IE6 workaround*/
-  height: 0;
-}
-
-.video-responsive iframe,
-.video-responsive object,
-.video-responsive embed {
-  position: absolute;
-  top: -90px;
-  left: 0;
-  width: 100%;
-  height: 90%;
-}
-
 /** del news*/
 * {
   padding: 0;
@@ -270,17 +252,28 @@ form button {
   box-sizing: border-box;
 }
 
-.button {
+
+.btn-btn-primary-btn-sm
+ {
   background-color:#ff00bb;
-  border: none;
+  border-color: #ff00bb;
   color: white;
-  padding: 15px 32px;
+  padding: 4px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
+  border-radius: 7px;
+  border-bottom: #ff00bb;
 }
-/** del news*/
+
+
+.about-text{
+  color: white;
+  font-size: 20px;
+  margin: 30px auto;
+  text-align: center;
+}
+
+/** FIN del news*/
 
   @media only screen and (max-width: 1200px) {
     .about {
@@ -301,8 +294,11 @@ form button {
   width: 100%;
 }
 
-.about-text {
-  width: 550px;
+
+@media screen and (min-width: 320px) {
+  .about-text h4  {
+    font-size: 30px;
+ }
 }
 
 .about-text h2 {
@@ -319,7 +315,10 @@ form button {
   font-size: 22px;
   margin-bottom: 25px;
   text-transform: capitalize;
-  padding-left: 20px;
+  padding-left: 15px;
+  padding-right: 24px;
+  text-align: center;
+
 
 }
 
@@ -329,7 +328,7 @@ form button {
   line-height: 28px;
   font-size: 18px;
   margin-bottom: 45px;
-  padding-right: 20px;
+  padding-right: 150px;
   padding-left: 20px;
   text-align: justify;
 }
@@ -426,5 +425,23 @@ input[type=submit]:hover {
   }
 }
 
+/* media */
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 
+
+
+}
