--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,9 +15,16 @@ body {
 }
 
 
-/* parte del biography */
+/* parte del pics */
+
+.responsive:hover .gallery{    /* efecto en las imagenes */
+
+  transform:  scale(1.8);
+  z-index: 2;
+}
+
 div.gallery {
-  border: 1px solid #ccc;
+  border: 1px solid rgb(204, 204, 204)
 }
 
 div.gallery:hover {
@@ -56,7 +63,7 @@ div.desc {
     width: 100%;
   }
 }
-/*fin del biography*/
+/*fin del pics*/
 nav {
   display: flex;
   justify-content: space-around;
@@ -289,10 +296,12 @@ form button {
   display: flex;
  
 }
-.image-fluid {
-  height: auto;
+
+.pic {
   width: 100%;
+  height: auto;
 }
+
 
 
 @media screen and (min-width: 320px) {
@@ -328,8 +337,8 @@ form button {
   line-height: 28px;
   font-size: 18px;
   margin-bottom: 45px;
-  padding-right: 150px;
-  padding-left: 20px;
+  padding-right: 24px;
+  padding-left: 25px;
   text-align: justify;
 }
 
