--- a/css/estilos.css
+++ b/css/estilos.css
@@ -64,6 +64,8 @@ div.desc {
   }
 }
 /*fin del pics*/
+
+/** menu **/
 nav {
   display: flex;
   justify-content: space-around;
@@ -72,7 +74,7 @@ nav {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/** menu **/
+
 .menu {
   width: 100%;
   background: rgb(8, 8, 8);
@@ -98,7 +100,8 @@ nav {
   font-size: 15px;
   text-transform: uppercase;
   font-weight: bold;
-  color: #fff;
+  color: rgb(255, 255, 255);
+  display: flex;
 }
 
 .menu ul li a:hover {
@@ -106,7 +109,7 @@ nav {
 }
 
 .toggle-nav {
-  color: #fff;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   display: none;
 }
@@ -115,6 +118,7 @@ nav {
   float: right;
   margin-right: 100px;
   line-height: 70px;
+  display: flex;
 }
 
 .social a {
@@ -156,7 +160,6 @@ nav {
   .social {
     width: 100%;
     text-align: center;
-    border-top: 1px solid #fff;
     float: none;
   }
 }
